force-app/main/default/objects/Truck_Load__c/fields/Departure_Date2__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date2__c</fullName>
    <label>Departure Date2</label>
    <type>Date</type>
</CustomField>