force-app/main/default/objects/Truck_Load__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <label>Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRL1</fullName>
            </value>
            <value>
                <fullName>TRL2</fullName>
            </value>
            <value>
                <fullName>TRL3</fullName>
            </value>
            <value>
                <fullName>TRL4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>