force-app/main/default/objects/Truck_Load__c/validationRules/Delivery_date_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_date_can_not_be_empty</fullName>
    <active>true</active>
    <description>Delivery date can not be empty if Departure date is selcted</description>
    <errorConditionFormula>AND( 
  NOT( ISNULL(Departure_Date2__c) ), 
  ISNULL(Delivery_Date2__c) 
)</errorConditionFormula>
    <errorDisplayField>Delivery_Date2__c</errorDisplayField>
    <errorMessage>Delivery Date must be set if Departure Date is set</errorMessage>
</ValidationRule>